Mon Oct 15 09:41:17 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (VM_CALLEE_SETUP_ARG): skip CI_SET_FASTPATH() if
	  it was called from vm_yield_setup_args().

Mon Oct 15 05:20:13 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h CI_SET_FASTPATH: introduce new macro
	  `CI_SET_FASTPATH(ci, func)'. This macro set `ci->call' as `func'.
	  `func' (ci->call) is called at the last of `send'
	  (and `invokesuper') instruction.
	  `CI_SET_FASTPATH' does not set `ci->call' when the method
	  (stored in `ci->me') is `protected'.

	* vm_insnhelper.c (vm_call_method): use `CI_SET_FASTPATH'.
	  After several checking (visibility, argc checking), the result of
	  checking can be reused until re-definition of this method
	  with inline method cache.

	  Note that this optimization is now experimental.
	  If you find any problem about it, please tell us.

Mon Oct 15 04:51:55 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c: refactoring.
	  - move all `call' related functions to the last of file.
	  - make functions for respective method types in vm_call_method().
	    (all functions have same function parameters)

	* vm_core.h: add `opt_pc' filed in `rb_call_info_t'
	  as temporal variable.

	* vm_eval.c (vm_call0_body): catch up above changes.

Mon Oct 15 03:51:46 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm1_attr_ivar(_set).rb: added (for method dispatch speed).

	* benchmark/bm_vm1_float_simple.rb: added (for flonum/float).

Mon Oct 15 02:51:16 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (vm_call0_body): add new function.
	  `vm_call0()' makes call_info struct and calls `vm_call0_body()'
	  with this struct. In near future, `vm_call0()' will be removed
	  because all of `vm_call0()' users setup call_info struct by itself.

Mon Oct 15 01:38:06 2012  Koichi Sasada  <ko1@atdot.net>

	* insns.def (send, invokesuper, invokeblock, opt_*), vm_core.h:
	  use only a `ci' (rb_call_info_t) parameter instead of using