@@ -1,3 +1,8 @@
+Mon Oct 15 22:14:44 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* test/ruby/envutil.rb (Test::Unit::Assertions#file_assertion):
+	  rewrite file assertions.
+
 Mon Oct 15 09:41:17 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_insnhelper.c (VM_CALLEE_SETUP_ARG): skip CI_SET_FASTPATH() if
